--- a/gradle.properties
+++ b/gradle.properties
@@ -58,7 +58,7 @@ mod_name=Realm of Destiny
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=1.0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -66,4 +66,4 @@ mod_group_id=net.yxiao233.realmofdestiny
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Y_Xiao233
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=For Y_Xiao233's Modpack : Remlm Of Destiny
+mod_description=For my ModPack : Realm Of Destiny
