--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ mapping_version=2023.09.03-1.20.1
 
 ## Dependency Properties
 jei_version=15.8.2.26
+patchouli_version=1.20.1-84-FORGE
 
 ## Mod Properties
 mod_id=realmofdestiny
