--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ minecraft {
         data {
             workingDirectory project.file('run-data')
 
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+
             args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
         }
     }
