--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ repositories {
     maven {
         url 'https://maven.blamejared.com'
     }
+
+    maven {
+        url 'https://modmaven.dev/' }
 }
 
 dependencies {
@@ -87,6 +90,9 @@ dependencies {
     //Patchouli
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+
+    //Mekanism
+    compileOnly "mekanism:Mekanism:${mekanism_version}:api"
 }
 
 tasks.named('processResources', ProcessResources).configure {
