--- a/gradle.properties
+++ b/gradle.properties
@@ -24,12 +24,13 @@ mapping_version=2023.09.03-1.20.1
 ## Dependency Properties
 jei_version=15.8.2.26
 patchouli_version=1.20.1-84-FORGE
+cyclopscore_version=232758:5262063
 
 ## Mod Properties
 mod_id=realmofdestiny
 mod_name=Realm of Destiny
 mod_license=MIT License
-mod_version=1.20.1-1.0.4
+mod_version=1.20.1-1.0.5
 mod_group_id=net.yxiao233.realmofdestiny
 mod_authors=Y_Xiao233
 mod_description=For my ModPack : Realm Of Destiny
