--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -30,3 +30,10 @@ description='''${mod_description}'''
     versionRange="[1.20.1-80-FORGE,)"
     ordering="NONE"
     side="BOTH"
+
+[[dependencies.${mod_id}]]
+    modId="patchouli"
+    mandatory=true
+    versionRange="[1.19.1,)"
+    ordering="NONE"
+    side="BOTH"
