--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,7 @@ titanium_version=1.20.1-3.8.32
 kubejs_version=2001.6.3-build.45
 rhino_version=2001.2.2-build.6
 architectury_version=9.1.12
+jade_id=6106101
 
 ## Mod Properties
 mod_id=realmofdestiny
