--- a/build.gradle
+++ b/build.gradle
@@ -105,11 +105,13 @@ repositories {
         }
     }
 
+
     maven {
-        // saps.dev Maven (KubeJS and Rhino)
-        url = "https://maven.saps.dev/minecraft"
+        //KubeJS and Rhino
+        url "https://maven.latvian.dev/releases"
         content {
             includeGroup "dev.latvian.mods"
+            includeGroup "dev.latvian.apps"
         }
     }
 }
